--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,14 @@ body {
 a {
   text-decoration: none;
 }
+.heading-lv2 {
+  color: #171100;
+  font-family: var(--font-heading);
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 1.27; /* 126.316% */
+  letter-spacing: -0.76px;
+}
 .main-content {
   width: 1170px;
   margin-left: auto;
@@ -228,4 +236,43 @@ a {
 }
 .hero .desc-strong strong:nth-child(2) {
   margin-left: 28px;
+}
+
+/* =============popular=================== */
+.popular {
+  padding: 65px 0;
+  margin-top: 135px;
+}
+.popular-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.popular-top .desc {
+  margin-top: 16px;
+  width: 458px;
+  color: #5f5b53;
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 1.66; /* 166.667% */
+}
+.popular-top .control {
+  display: flex;
+  gap: 18px;
+}
+.popular-top .control-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+}
+.popular-top .control-btn:hover {
+  background: var(--primary-color);
+  color: white;
+  cursor: pointer; /*hiện bàn tay khi di chuột vào */
 }
